--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
@@ -18,6 +18,7 @@
     "react-validation": "^3.0.7",
     "reactstrap": "^9.1.5",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
